[gd_scene load_steps=6 format=3 uid="uid://d2r0vwmkgn62w"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_alia7"]
[ext_resource type="PackedScene" uid="uid://dwb0s1kdsy4yv" path="res://Player/KatsuAnimation.tscn" id="2_gqlfo"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="3_m5t11"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8jbsg"]
radius = 1.41071
height = 8.95316

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0wbdt"]
radius = 3.96428

[node name="Player" type="CharacterBody3D"]
collision_mask = 14
script = ExtResource("1_alia7")
fall_acceleration = 77

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)

[node name="KatsuBoi_anim" parent="Pivot" instance=ExtResource("2_gqlfo")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41297, 0)
shape = SubResource("CapsuleShape3D_8jbsg")

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("3_m5t11")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.66961, -1.94783)
spring_length = 21.0

[node name="Camera3D" type="Camera3D" parent="CameraController/SpringArm3D"]

[node name="NpcDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.2689, 0)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="NpcDetector"]
shape = SubResource("CylinderShape3D_0wbdt")

[connection signal="body_entered" from="NpcDetector" to="." method="_on_npc_detector_body_entered"]
[connection signal="body_exited" from="NpcDetector" to="." method="_on_npc_detector_body_exited"]
